--- a/index.html
+++ b/index.html
@@ -93,6 +93,21 @@
         </div>
       </div>
     </section>
+
+    <section>
+     
+      <div class="form-container">
+         <span id="portfolio">
+        <p class="titles">Get In Touch</p>
+      </span>
+        <form class="form" action="submit">
+          <input class="js-name" id="input" type="text" placeholder="Name">
+          <input class="js-email" id="input" type="email" required placeholder="email" ><br>
+          <textarea class="js-message" name="message" id="message" placeholder="Message"></textarea><br>
+          
+        </form><button class="submit-btn">Submit</button>
+      </div>
+    </section>
   </main>
   <script src="script.js"></script>
 </body>
